// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders btn 1`] = `
<button
  className="sc-bdVaJa dLOjfg"
>
  Lorem
</button>
`;

exports[`Renders btn 2`] = `
<button
  className="sc-bdVaJa dLOjfg"
>
  Ipsum
</button>
`;

exports[`Renders btn 3`] = `
<button
  className="sc-bdVaJa dLOjfg"
>
  💩
</button>
`;
